# xlsxt

./: LICENSE  README.md  comparator.py  demo.json  demo.py  demo.xlsx  output.xlsx  output_expected.xlsx  pyproject.toml  requirements.txt  xlst.py  xlsxt.py
examples/: demo.py  demo.xlsx  output.xlsx
scripts/: live_preview
src/xlsxt/: __init__.py  xlsx_template.py
tests/: test_example.py
