[project]
name = "xlsxt"
version = "0.1.0"
description = "Transform xlsx template with jinja like notation to xlsx"
readme = "README.md"
authors = [
    { name = "Stéphan Mestach", email = "mestachs@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "openpyxl>=3.1.5",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["xlsxt"]

[tool.setuptools.package-dir]
"" = "src"