[project]
name = "xlsxt"
version = "0.1.0"
description = "Transform xlsx template with jinja like notation to xlsx"
readme = "README.md"
authors = [
    { name = "Stéphan Mestach", email = "mestachs@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "openpyxl>=3.1.5",
    "pillow>=11.1.0",
]

[tool.pdm.dev-dependencies]  # PDM-style (used by uv)
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["xlsxt"]

[tool.setuptools.package-dir]
"" = "src"
